fix bug Unintended Body Overflow-x mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,24 @@ html {
 }
 body {
 	overflow-x: hidden;
+	min-width: 100vw;
 }
 
 /* ======= NAVBAR  =======*/
 .navbar {
 	width: 100vw;
+	min-width: 100%;
 	height: 15vh;
 	background-color: var(--color-primary-500);
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	/* overflow-x: hidden; */
 }
 
 .nav-wrapper {
-	margin: 0 auto;
-	width: 80%;
+	/* margin: 0 auto; */
+	width: 70%;
 	max-width: 1000px;
 	display: flex;
 	flex-direction: row;
@@ -54,6 +58,7 @@ body {
 	align-items: center;
 	color: var(--color-light-100);
 	gap: 1rem;
+	/* overflow-x: hidden; */
 }
 .logo {
 	height: inherit;
@@ -231,6 +236,7 @@ body {
 /* ======= ABOUT MODAL  =======*/
 
 .about-modal {
+	display: none;
 	font-family: var(--font-primary);
 	position: absolute;
 	width: 0;
@@ -270,6 +276,9 @@ body {
 	left: 0;
 	width: 100%;
 	height: auto;
+}
+.display-modal {
+	display: block;
 }
 
 .about-btn {
@@ -317,14 +326,23 @@ body {
 	font-size: 1.85rem;
 	margin-bottom: 2rem;
 }
-.metric-plus-btn i {
+.metric-plus-btn {
+	transform: rotate(0);
+	cursor: pointer;
+	transition: var(--transition-500);
+}
+.metric-plus-btn:hover {
+	transform: rotate(45deg);
+	color: var(--color-sucess-500);
+}
+/* .metric-plus-btn i {
 	cursor: pointer;
 	transition: var(--transition-500);
 }
 .metric-plus-btn i:hover {
 	transform: rotate(45deg);
 	color: var(--color-sucess-500);
-}
+} */
 .metric-plus-btn-onshow {
 	transform: rotate(45deg);
 	color: var(--color-alert-500);
